# aws-fargate-calculator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/: fargate.py  main.py
