[project]
name = "eks-fargate-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]

[tool.isort]
profile = "black"
import_heading_stdlib="Import standard library modules"
import_heading_thirdparty="Import third-party library modules"
import_heading_firstparty="Import local modules"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[dependency-groups]
dev = []
