[project]
name = "eks-fargate-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]

# https://docs.astral.sh/ruff/configuration/#configuring-ruff
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
